correcting contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -164,7 +164,7 @@ nav li {
 }
 
 .course-content .white-bg {
-    background-color: rgb(49, 116, 161)
+    background-color: rgb(38, 92, 129)
 }
 
 .full-width {
